--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-transform: capitalize;
 }
+.flexb {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
